# tauri-plugin-sharetarget

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
android/: .project  build.gradle.kts  kls_database.db
android/src/androidTest/java/: ExampleInstrumentedTest.kt  ShareTargetInstrumentedTest.kt
android/src/main/java/: ShareTarget.kt  ShareTargetPlugin.kt  Shared.kt  SharedPlugin.kt
android/src/test/java/: ExampleUnitTest.kt  ShareTargetUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: register-listener.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
