[package]
name = "tauri-plugin-share-target"
version = "0.1.0"
authors = [ "la Fleur <lafleur@boum.org>" ]
description = "receive share intents for Tauri on Android"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-share-target"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
serde_json = "1"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
tauri-build = "2.0.1"
